HoyluShare und QR-Code-Scanner
fertiggestellt

--- a/HoyluShare/app/build.gradle
+++ b/HoyluShare/app/build.gradle
@@ -2,11 +2,10 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.2"
-
+    buildToolsVersion "25.0.0"
     defaultConfig {
-        applicationId "com.example.zarehhakobian.qr_code"
-        minSdkVersion 21
+        applicationId "com.example.zarehhakobian.hoylushare"
+        minSdkVersion 15
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
@@ -21,14 +20,10 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.1.1'
-    compile 'com.google.android.gms:play-services-vision:9.6.1'
-    compile 'me.dm7.barcodescanner:zxing:1.8.4'
+    compile 'com.android.support:appcompat-v7:25.3.1'
     testCompile 'junit:junit:4.12'
-    compile files('libs/core-3.2.1.jar')
-
 }
