mit HockeyApp-Events

--- a/HoyluShare/app/src/main/AndroidManifest.xml
+++ b/HoyluShare/app/src/main/AndroidManifest.xml
@@ -18,6 +18,10 @@
         android:theme="@style/AppTheme">
 
         <meta-data
+            android:name="net.hockeyapp.android.appIdentifier"
+            android:value="268b893dc1734435b6d1c2b301f0f498" />
+
+        <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version"/>
         <meta-data
