--- a/HoyluShare/app/src/main/AndroidManifest.xml
+++ b/HoyluShare/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
         android:icon="@mipmap/ic_hoylu"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:largeHeap="true">
 
         <meta-data
             android:name="net.hockeyapp.android.appIdentifier"
