--- a/HoyluShare/app/src/main/AndroidManifest.xml
+++ b/HoyluShare/app/src/main/AndroidManifest.xml
@@ -19,8 +19,7 @@
         android:icon="@mipmap/ic_hoylu"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:largeHeap="true">
+        android:theme="@style/AppTheme">
 
         <meta-data
             android:name="net.hockeyapp.android.appIdentifier"
