--- a/HoyluReceiver/HoyluReceiver/HoyluReceiver.csproj
+++ b/HoyluReceiver/HoyluReceiver/HoyluReceiver.csproj
@@ -85,6 +85,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="HoyluDevice.cs" />
+    <Compile Include="ImagePart.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
