--- a/HoyluShare/app/build.gradle
+++ b/HoyluShare/app/build.gradle
@@ -21,11 +21,11 @@ android {
         }
     }
 
-    /*packagingOptions {
+    packagingOptions {
         exclude 'META-INF/LICENSE'
         exclude 'META-INF/NOTICE'
         exclude 'META-INF/DEPENDENCIES'
-    }*/
+    }
 
     repositories {
         jcenter()
@@ -49,11 +49,12 @@ dependencies {
     compile 'com.android.support:design:25+'
     compile files('libs/commons-codec-1.10.jar')
     compile files('libs/java-util.jar')
-
     def mobileCenterSdkVersion = '0.11.1'
     compile "com.microsoft.azure.mobile:mobile-center-analytics:${mobileCenterSdkVersion}"
     compile "com.microsoft.azure.mobile:mobile-center-crashes:${mobileCenterSdkVersion}"
-
     compile 'net.hockeyapp.android:HockeySDK:4.1.4'
     compile 'com.android.support.test.espresso:espresso-core:2.2.2'
+    compile files('libs/httpclient-4.5.3.jar')
+    compile files('libs/httpmime-4.5.3.jar')
+    compile files('libs/httpcore-4.4.6.jar')
 }
