--- a/HoyluShare/app/build.gradle
+++ b/HoyluShare/app/build.gradle
@@ -57,4 +57,7 @@ dependencies {
     compile files('libs/httpclient-4.5.3.jar')
     compile files('libs/httpmime-4.5.3.jar')
     compile files('libs/httpcore-4.4.6.jar')
+
+    compile 'com.koushikdutta.ion:ion:2.+'
+
 }
