--- a/HoyluShare/app/build.gradle
+++ b/HoyluShare/app/build.gradle
@@ -23,7 +23,7 @@ android {
 
     packagingOptions {
         exclude 'META-INF/LICENSE'
-        exclude 'META-INF/NOTICE'
+        //exclude 'META-INF/NOTICE'
         exclude 'META-INF/DEPENDENCIES'
     }
 
