--- a/HoyluReceiver/HoyluReceiver/HoyluReceiver.csproj
+++ b/HoyluReceiver/HoyluReceiver/HoyluReceiver.csproj
@@ -94,7 +94,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="HoyluDevice.cs" />
-    <Compile Include="ImagePart.cs" />
+    <Compile Include="ServerFile.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
