--- a/HoyluReceiver/HoyluReceiver/HoyluReceiver.csproj
+++ b/HoyluReceiver/HoyluReceiver/HoyluReceiver.csproj
@@ -94,11 +94,18 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="HoyluDevice.cs" />
+    <Compile Include="ProgressDialog.xaml.cs">
+      <DependentUpon>ProgressDialog.xaml</DependentUpon>
+    </Compile>
     <Compile Include="ServerFile.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="ProgressDialog.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
