--- a/HoyluShare/app/build.gradle
+++ b/HoyluShare/app/build.gradle
@@ -32,32 +32,34 @@ android {
     }
 }
 
+
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    testCompile 'junit:junit:4.12'
-    compile 'com.github.nkzawa:socket.io-client:0.3.0'
     compile('io.socket:engine.io-client:0.9.0') {
         // excluding org.json which is provided by Android
         exclude group: 'org.json', module: 'json'
     }
     compile files('libs/jsoup-1.10.3.jar')
-    compile 'com.google.android.gms:play-services:9.4.0+'
-    compile 'com.android.support:design:25+'
     compile files('libs/commons-codec-1.10.jar')
     compile files('libs/java-util.jar')
     def mobileCenterSdkVersion = '0.11.1'
     compile "com.microsoft.azure.mobile:mobile-center-analytics:${mobileCenterSdkVersion}"
     compile "com.microsoft.azure.mobile:mobile-center-crashes:${mobileCenterSdkVersion}"
-    compile 'net.hockeyapp.android:HockeySDK:4.1.4'
-    compile 'com.android.support.test.espresso:espresso-core:2.2.2'
     compile files('libs/httpclient-4.5.3.jar')
     compile files('libs/httpmime-4.5.3.jar')
     compile files('libs/httpcore-4.4.6.jar')
 
-    compile 'com.koushikdutta.ion:ion:2.+'
 
+    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.github.nkzawa:socket.io-client:0.3.0'
+    compile 'com.google.android.gms:play-services:11.0.4'
+    compile 'com.android.support:design:25.3.1'
+    compile 'net.hockeyapp.android:HockeySDK:4.1.4'
+    compile 'com.android.support.test.espresso:espresso-core:2.2.2'
+    compile 'com.koushikdutta.ion:ion:2.+'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    testCompile 'junit:junit:4.12'
 }
