--- a/HoyluReceiver/HoyluReceiver/HoyluReceiver.csproj
+++ b/HoyluReceiver/HoyluReceiver/HoyluReceiver.csproj
@@ -109,6 +109,9 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="HoyluDevice.cs" />
+    <Compile Include="MessageBoxEditText.xaml.cs">
+      <DependentUpon>MessageBoxEditText.xaml</DependentUpon>
+    </Compile>
     <Compile Include="ProgressDialog.xaml.cs">
       <DependentUpon>ProgressDialog.xaml</DependentUpon>
     </Compile>
@@ -117,6 +120,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="MessageBoxEditText.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="ProgressDialog.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
