--- a/HoyluReceiver/HoyluReceiver/HoyluReceiver.csproj
+++ b/HoyluReceiver/HoyluReceiver/HoyluReceiver.csproj
@@ -108,6 +108,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Config.cs" />
     <Compile Include="HoyluDevice.cs" />
     <Compile Include="MessageBoxEditText.xaml.cs">
       <DependentUpon>MessageBoxEditText.xaml</DependentUpon>
